--- a/css/main.css
+++ b/css/main.css
@@ -124,3 +124,15 @@ html {
         transform: translateY(0px);
     }
 }
+
+@keyframes fade_in_about_us_textbox {
+    0% {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateY(0px);
+    }
+}
