--- a/css/about.css
+++ b/css/about.css
@@ -9,6 +9,7 @@
 .about__terminal {
     color: #cdd9e5;
     animation: animate_about_section 1.1s forwards ease;
+    opacity: 0;
 }
 
 .about__terminal--box {
@@ -63,6 +64,7 @@
     transform: translateY(50px);
     animation: animate_about_section 1.2s forwards ease;
     animation-delay: 300ms;
+    opacity: 0;
 }
 
 .about__selected-projects--box {
