--- a/css/hero.css
+++ b/css/hero.css
@@ -10,6 +10,7 @@
     justify-content: center;
     align-items: center;
     animation: animate_hero_textbox 1.4s forwards;
+    opacity: 0;
 }
 
 .hero__animation {
