--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 :root {
     --header-gradient: linear-gradient(-45deg, #000000, #06000c);
     --main-gradient: linear-gradient(45deg, #000000, #0a0015, #06000b);
+    --main-color2: linear-gradient(45deg, #c56ffd, #b242fc, #a115fd);
     --main-color: linear-gradient(45deg, #e7c2ff, #ca7bff, #b13cff);
 }
 
@@ -134,5 +135,17 @@ html {
     100% {
         opacity: 1;
         transform: translateY(0px);
+    }
+}
+
+@keyframes fade_in_contact_form {
+    0% {
+        opacity: 0;
+        transform: translateX(20px);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateX(0px);
     }
 }
