--- a/css/main.css
+++ b/css/main.css
@@ -149,3 +149,37 @@ html {
         transform: translateX(0px);
     }
 }
+
+@keyframes animate_services_header_line {
+    0% {
+        width: 0%;
+    }
+
+    100% {
+        width: 90%;
+    }
+}
+
+@keyframes fade_in_service_info_box {
+    0% {
+        opacity: 0;
+        transform: translateX(20px);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateX(0px);
+    }
+}
+
+@keyframes fade_in_service_info_box2 {
+    0% {
+        opacity: 0;
+        transform: translateX(-20px);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateX(0px);
+    }
+}
