--- a/css/main.css
+++ b/css/main.css
@@ -18,8 +18,20 @@ body {
     background: var(--main-gradient);
     background-size: 1300% 1300%;
     animation: background-gradient-animation 12s ease-in-out infinite;
-    height: 100vh;
     background-color: #06000b;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+main {
+    flex: 1;
+}
+
+html,
+body {
+    height: 100%;
+    margin: 0;
 }
 
 html {
